// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackButton Back to entity button 1`] = `
<div>
  <div>
    <a
      class="back-button my-auto "
      href="/collection/material-sample/view?id=108559ed-e000-49c4-95e0-03dee7bfce9b"
    >
      Back to read-only page
    </a>
  </div>
  <div
    id="DndDescribedBy-0"
    style="display: none;"
  />
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-0"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</div>
`;

exports[`BackButton Back to entity button 2`] = `
<div>
  <div>
    <a
      class="back-button my-auto class-name-test"
      href="/collection/material-sample/view?id=108559ed-e000-49c4-95e0-03dee7bfce9b"
    >
      Back to read-only page
    </a>
  </div>
  <div
    id="DndDescribedBy-1"
    style="display: none;"
  />
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-1"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</div>
`;

exports[`BackButton Back to list button 1`] = `
<div>
  <div>
    <a
      class="back-button my-auto "
      href="/collection/material-sample/list"
    >
      Back to list page
    </a>
  </div>
  <div
    id="DndDescribedBy-2"
    style="display: none;"
  />
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-2"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</div>
`;

exports[`BackButton Back to list button 2`] = `
<div>
  <div>
    <a
      class="back-button my-auto "
      href="/collection/material-sample/list"
    >
      Back to list page
    </a>
  </div>
  <div
    id="DndDescribedBy-3"
    style="display: none;"
  />
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-3"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</div>
`;

exports[`BackButton Back to list button 3`] = `
<div>
  <div>
    <a
      class="back-button my-auto "
      href="/collection/material-sample/list"
    >
      Back to list page
    </a>
  </div>
  <div
    id="DndDescribedBy-4"
    style="display: none;"
  />
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-4"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />
</div>
`;
